--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,15 @@
 body{
-    text-align: center;
-    color: rgba(161, 123, 130, 0.788);
+    text-align: left;
+    color: #333;
     font-family: 'arial';
     font-size: 16px;
     margin: 0;
+    padding: 0;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
 }
